# GreenHouseAutomation

./: .gitignore  README.md  create_db.py  db_api.env  db_globals.py  relay.py  requirements.txt  service.py  setup.cfg
alembic/: env.py
alembic/versions/: f80ede534425_add_light_and_fan_columns.py
api/: main.py
database/: add_schedules.py  alembic.ini  db_globals.py  delete_db.py  docker-compose.yaml  enums.py  servers.json  session.py
database/alembic/versions/: 67612e82c79b_modify_schedule_time_column_type.py  df25d9ee9258_verify_duration_column_addition.py  e2ea30bcaf1b_add_duration_to_db.py
database/cache/: env.py
services/: add_schedule.py  scheduled_task.py  service.py
services/devices/: controllers.py  lights.py  relay.py
