[metadata]
name = green-house-automation
version = 1.10.5

[options]
zip_safe = false
python_requires = >= 3.11
packages = find:

install_requires =

    # External Packages
    adafruit-circuitpython-dht
    adafruit-blinka
    sqlalchemy
    psycopg2
    fastapi ~= 0.110.1
    uvicorn ~= 0.29.0
    pydantic ~= 2.6.4
